[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allograph"
version = "0.1.0"
description = "AlloGraph core: graph-based allosteric signal propagation"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["allograph*"]

[project.scripts]
rinet = "allograph.cli:main"
